Fix tab overflow

--- a/style.css
+++ b/style.css
@@ -4,15 +4,18 @@
 
 html,
 body {
-  height: 100%;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #464545;
   color: #1a1a1a;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden!important;
+  width: 100%;
 }
 
 footer {
   position: relative;
-  padding: 1rem;
+  padding: 1rem 0;
   text-align: center;
 }
 
@@ -75,11 +78,12 @@ a {
   color: black;
   transition: opacity 0s linear;
   width: 60px;
-  visibility: hidden; 
-  opacity: 0;
+  /* visibility: hidden; 
+  opacity: 0; */
   font-size: .6rem;
   font-weight: bold;
 }
+
   .tab-container:hover .tab-text {
     visibility: visible;
     opacity: 1;
@@ -146,6 +150,8 @@ a {
   background-color: #363338;
   padding: 0 0 5px 0;
   color: #f5f5f5;
+  margin: 0 0px;
+
 }
 
   #streamer-header {
